// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LoadingPlaceholder /> > should render 1`] = `
<LoadingPlaceholder
  margin="220px"
>
  <Loader />
</LoadingPlaceholder>
`;

exports[`<LoadingPlaceholder /> > should render the provided message 1`] = `
<LoadingPlaceholder
  margin="220px"
>
  <p>
    Test Message
  </p>
  <Loader />
</LoadingPlaceholder>
`;
